GNOME Bugzilla – Bug 692731
Crashes when skipping over files too fast
Last modified: 2013-03-06 16:56:14 UTC
I wanted to find a sound, so I did: $ totem /usr/share/sounds/freedesktop/stereo/*.oga and mashed the right arrow button, and got this:
+ Trace 231457
*** Bug 693983 has been marked as a duplicate of this bug. ***
*** Bug 694617 has been marked as a duplicate of this bug. ***
Refactored the code that loads the chapters data async which seems to fix the problem for me.