chapters: Refactor async chapters loading

Using GIO-style async functions which can be properly cancelled.

https://bugzilla.gnome.org/show_bug.cgi?id=692731